--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ vendor
 
 # Nix
 result
+
+# Local environment
+dev/local-environment/.env
+dev/local-environment/docker-compose.yml
+dev/local-environment/configurations/tests/e2e-tests
+dev/local-environment/configurations/pc-contracts-cli/overrides
