fix: don't copy test report from container if local run

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -101,7 +101,7 @@ runs:
           eval "$pytest_cmd"
         fi
     - name: Copy .report.json if run with docker exec
-      if: ${{ inputs.local-environment }} == 'true'
+      if: ${{ inputs.local-environment == 'true' }}
       run: |
         echo "Copy test results from docker container"
         mkdir -p e2e-tests
