--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -40,6 +40,10 @@ inputs:
   decrypt:
     description: 'Decrypt secrets'
     required: false
+  threads:
+    description: 'Number of threads to use'
+    required: false
+    default: '4'
 
 runs:
   using: composite
@@ -75,7 +79,7 @@ runs:
           --log-cli-level '${{ inputs.log_level }}' \
           -k '${{ inputs.keyword }}' \
           -m '${{ inputs.markers }}' \
-          -n 4 \
+          -n '${{ inputs.threads}}' \
           --dist=loadgroup \
           --ci-run \
           --init-timestamp '${{ inputs.init_timestamp }}' \
