--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: CD 
+name: CD
 
 on:
   workflow_dispatch:
@@ -12,12 +12,17 @@ on:
         required: true
         type: string
       no-release:
-        description: "Deploy and test only (skip Release and GHCR steps)"
+        description: "Skip Release and GHCR steps"
         required: false
         type: boolean
         default: false
       no-deploy:
-        description: "Build and Release only (skip deploy and test steps)"
+        description: "Skip deploy steps"
+        required: false
+        type: boolean
+        default: false
+      no-tests:
+        description: "Skip test steps"
         required: false
         type: boolean
         default: false
@@ -60,7 +65,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.sha }} 
+          ref: ${{ inputs.sha }}
       - name: Build and Upload for macOS x86_64
         uses: ./.github/actions/artifacts/build-pc-artifacts
         with:
@@ -84,6 +89,7 @@ jobs:
           os: macos-arm64
 
   build-and-publish-ecr:
+    if: ${{ github.event.inputs.no-release != 'true' }}
     permissions:
       id-token: write
       contents: write
@@ -104,16 +110,19 @@ jobs:
           SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
 
   create-draft-release:
+    if: ${{ github.event.inputs.no-release != 'true' }}
     permissions:
       id-token: write
       contents: write
-    needs: [build-linux, build-macos-x86_64, build-macos-arm64]
+    needs:
+      - build-linux
+      - build-macos-x86_64
+      - build-macos-arm64
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Create Draft Release
-        if: ${{ github.event.inputs.no-release == 'false' }}
         uses: ./.github/actions/release/create-draft-release
         with:
           tag: ${{ inputs.tag }}
@@ -157,7 +166,9 @@ jobs:
     permissions:
       id-token: write
       contents: write
-    needs: [build-and-publish-ecr, upload-chain-specs]
+    needs:
+      - build-and-publish-ecr
+      - upload-chain-specs
     runs-on: eks
     steps:
       - name: Checkout
@@ -222,8 +233,8 @@ jobs:
           echo "Blocks are being finalized. Finalized Block Number: $FINALIZED_NUMBER"
         shell: bash
 
-  run-smoke-tests: 
-    if: ${{ github.event.inputs.no-deploy != 'true' }}
+  run-smoke-tests:
+    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -249,7 +260,7 @@ jobs:
           threads: 1
 
   run-all-tests:
-    if: ${{ github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -268,7 +279,7 @@ jobs:
       - name: Run all tests (some skipped due to new deployment)
         uses: ./.github/actions/tests/run-e2e-tests
         env:
-          DEPLOYMENT_MC_EPOCH: ${{needs.partner-chain-ready.outputs.deployment_mc_epoch}}
+          DEPLOYMENT_MC_EPOCH: ${{ needs.partner-chain-ready.outputs.deployment_mc_epoch }}
         with:
           blockchain: substrate
           env: staging
@@ -278,7 +289,7 @@ jobs:
           threads: 1
 
   wait-for-n1-epoch:
-    if: ${{ github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -297,7 +308,7 @@ jobs:
       - name: Set MC epoch to wait for
         id: increment-epoch
         env:
-          DEPLOYMENT_MC_EPOCH: ${{needs.partner-chain-ready.outputs.deployment_mc_epoch}}
+          DEPLOYMENT_MC_EPOCH: ${{ needs.partner-chain-ready.outputs.deployment_mc_epoch }}
         run: |
           echo "Current epoch: $DEPLOYMENT_MC_EPOCH"
           incremented_epoch=$((DEPLOYMENT_MC_EPOCH + 1))
@@ -312,7 +323,7 @@ jobs:
           environment: staging-preview
 
   run-all-tests-on-n1-epoch:
-    if: ${{ github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -331,7 +342,7 @@ jobs:
       - name: Run all tests (some skipped due to new deployment)
         uses: ./.github/actions/tests/run-e2e-tests
         env:
-          DEPLOYMENT_MC_EPOCH: ${{needs.partner-chain-ready.outputs.deployment_mc_epoch}}
+          DEPLOYMENT_MC_EPOCH: ${{ needs.partner-chain-ready.outputs.deployment_mc_epoch }}
         with:
           blockchain: substrate
           env: staging
@@ -342,11 +353,13 @@ jobs:
           threads: 1
 
   wait-for-n2-epoch:
-    if: ${{ github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
     permissions:
       id-token: write
       contents: read
-    needs: [partner-chain-ready, wait-for-n1-epoch]
+    needs:
+      - partner-chain-ready
+      - wait-for-n1-epoch
     runs-on: eks
     timeout-minutes: 1450
     steps:
@@ -361,7 +374,7 @@ jobs:
       - name: Set MC epoch to wait for
         id: increment-epoch
         env:
-          DEPLOYMENT_MC_EPOCH: ${{needs.partner-chain-ready.outputs.deployment_mc_epoch}}
+          DEPLOYMENT_MC_EPOCH: ${{ needs.partner-chain-ready.outputs.deployment_mc_epoch }}
         run: |
           echo "Current epoch: $DEPLOYMENT_MC_EPOCH"
           incremented_epoch=$((DEPLOYMENT_MC_EPOCH + 2))
@@ -376,7 +389,7 @@ jobs:
           environment: staging-preview
 
   run-all-tests-on-n2-epoch:
-    if: ${{ github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -395,7 +408,7 @@ jobs:
       - name: Run all tests (no skipped tests)
         uses: ./.github/actions/tests/run-e2e-tests
         env:
-          DEPLOYMENT_MC_EPOCH: ${{needs.partner-chain-ready.outputs.deployment_mc_epoch}}
+          DEPLOYMENT_MC_EPOCH: ${{ needs.partner-chain-ready.outputs.deployment_mc_epoch }}
         with:
           blockchain: substrate
           env: staging
@@ -406,12 +419,16 @@ jobs:
           threads: 1
 
   publish:
-    if: ${{ github.event.inputs.no-release == 'false' && (needs.run-all-tests-on-n2-epoch.result == 'success' || needs.run-all-tests-on-n2-epoch.result == 'skipped') }}
+    if: ${{ github.event.inputs.no-release != 'true' && (github.event.inputs.no-tests == 'true' || needs.run-all-tests-on-n2-epoch.result == 'success' || needs.run-all-tests-on-n2-epoch.result == 'skipped') }}
     permissions:
       id-token: write
       contents: write
       packages: write
-    needs: run-all-tests-on-n2-epoch
+    needs:
+      - build-linux
+      - build-macos-x86_64
+      - build-macos-arm64
+      - run-all-tests-on-n2-epoch
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Publish Workflow
@@ -421,7 +438,6 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/publish.yml/dispatches \
             -d '{"ref": "main", "inputs": {"sha": "${{ github.sha }}", "tag": "${{ github.ref }}"}}'
-
 
 #  deploy-staging-preprod:
 #    if: ${{ github.event.inputs.no-deploy != 'true' }}
@@ -448,8 +464,8 @@ jobs:
 #          K8S_SERVER: ${{ secrets.K8S_SERVER }}
 #          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 #
-#  staging-preprod-tests: 
-#    if: ${{ github.event.inputs.no-deploy != 'true' }}
+#  staging-preprod-tests:
+#    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
 #    permissions:
 #      id-token: write
 #      contents: write
