feat: add logic for mint d-param token transaction

--- a/toolkit/offchain/Cargo.toml
+++ b/toolkit/offchain/Cargo.toml
@@ -24,6 +24,7 @@ minicbor = { workspace = true }
 ogmios-client = { workspace = true, features = ["jsonrpsee-client"] }
 pallas-addresses = { workspace = true }
 pallas-primitives = { workspace = true }
+partner-chains-plutus-data = { workspace = true }
 plutus = { workspace = true }
 raw-scripts = { workspace = true }
 serde = { workspace = true }
