--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -94,12 +94,16 @@ runs:
         if [[ "${{ inputs.local-environment }}" == "true" ]]; then
           echo "Running tests via docker exec"
           docker exec tests bash -c "
+            echo "Folder contents"
+            ls -la
             cd ../../../../E2E-tests &&
             source venv/bin/activate &&
             $pytest_cmd
           "
         else
           echo "Running tests locally"
+          echo "Folder contents"
+          ls -la
           cd ../../../../E2E-tests
           source venv/bin/activate
           eval "$pytest_cmd"
