ETCM-8833 print folder contents

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -48,6 +48,17 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Print Folder Contents
+      run: |
+        echo "Print folder contents"
+        ls -la
+        echo "Print one level up"
+        cd ..
+        ls -la
+        echo "Print another level up"
+        cd ..
+        ls -la
+
     - name: Run tests
       id: run-tests
       continue-on-error: true
@@ -94,16 +105,12 @@ runs:
         if [[ "${{ inputs.local-environment }}" == "true" ]]; then
           echo "Running tests via docker exec"
           docker exec tests bash -c "
-            echo "Folder contents"
-            ls -la
             cd ../../../../E2E-tests &&
             source venv/bin/activate &&
             $pytest_cmd
           "
         else
           echo "Running tests locally"
-          echo "Folder contents"
-          ls -la
           cd ../../../../E2E-tests
           source venv/bin/activate
           eval "$pytest_cmd"
