ETCM-8833 print folder contents

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -49,6 +49,7 @@ runs:
   using: composite
   steps:
     - name: Print Folder Contents
+      shell: bash
       run: |
         echo "Print folder contents"
         ls -la
