--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -53,6 +53,20 @@ runs:
       continue-on-error: true
       shell: bash
       run: |
+        # Wait for tests container to be ready
+        echo "Waiting for tests container to initialize..."
+        while ! docker exec tests [ -d "/E2E-tests/venv" ]; do 
+          sleep 5
+          # Check if container is still running
+          if ! docker ps | grep -q tests; then
+            echo "Tests container is not running. Checking logs:"
+            docker logs tests
+            exit 1
+          fi
+        done
+        
+        echo "Tests container is ready"
+        
         mc_epoch_switch=""
         if [ -n "${{ inputs.mc_epoch }}" ]; then
           mc_epoch_switch="--mc-epoch '${{ inputs.mc_epoch }}'"
