--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -44,41 +44,49 @@ runs:
         path: dev/local-environment/configurations/pc-contracts-cli/overrides/
     - name: Setup E2E tests directory
       run: |
-        # Create the target directory
-        mkdir -p dev/local-environment/configurations/tests/E2E-tests
-        
-        # Debug: Show current directory and E2E-tests contents
+        # Debug: Show current working directory
+        echo "Current directory:"
         pwd
+        
+        # Debug: Show E2E-tests contents
+        echo "E2E-tests contents:"
         ls -la E2E-tests/
         
-        # Copy E2E-tests from partner-chains repo to the correct location
-        cp -r E2E-tests/* dev/local-environment/configurations/tests/E2E-tests/
+        # Create the target directory with explicit full path
+        FULL_PATH=$(pwd)/dev/local-environment/configurations/tests/E2E-tests
+        echo "Creating directory at: $FULL_PATH"
+        mkdir -p "$FULL_PATH"
         
-        # Debug: Verify the copy
+        # Copy with verbose flag to see what's being copied
+        echo "Copying files..."
+        cp -rv E2E-tests/* "$FULL_PATH/"
+        
+        # Verify the copy
         echo "Verifying copied tests:"
-        ls -la dev/local-environment/configurations/tests/E2E-tests/
+        ls -la "$FULL_PATH"
+        
+        # Check permissions
+        echo "Directory permissions:"
+        ls -la $(pwd)/dev/local-environment/configurations/tests/
       shell: bash
     - name: Deploy local environment with overrides
       run: |
         mv dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-cli-artifact dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-cli
         mv dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-node-artifact dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-node
         
-        # Debug: Check directory structure before running setup
-        echo "Directory structure before setup:"
-        ls -R dev/local-environment/configurations/tests/
-        
         cd dev/local-environment
-        bash setup.sh --non-interactive --overrides --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests
         
-        # Debug: Check if tests directory is mounted correctly
-        echo "Docker compose config:"
-        docker compose config | grep -A 5 tests
+        # Debug: Show Docker Compose configuration
+        echo "Docker Compose configuration:"
+        docker compose config
+        
+        bash setup.sh --non-interactive --overrides --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests
         
         docker compose up -d
         
-        # Debug: Check container mounts
-        echo "Container mounts:"
-        docker inspect tests | grep -A 10 Mounts
+        # Debug: Show container details
+        echo "Container details:"
+        docker inspect tests
         
         cd ../../
       shell: bash
