fix: cd.yml skips

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -57,6 +57,7 @@ jobs:
           os: linux
 
   build-macos-x86_64:
+    if: ${{ github.event.inputs.no-release != 'true' }}
     permissions:
       id-token: write
       contents: write
@@ -73,6 +74,7 @@ jobs:
           os: macos-x86_64
 
   build-macos-arm64:
+    if: ${{ github.event.inputs.no-release != 'true' }}
     permissions:
       id-token: write
       contents: write
@@ -89,7 +91,6 @@ jobs:
           os: macos-arm64
 
   build-and-publish-ecr:
-    if: ${{ github.event.inputs.no-release != 'true' }}
     permissions:
       id-token: write
       contents: write
@@ -189,7 +190,7 @@ jobs:
           K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 
   partner-chain-ready:
-    if: ${{ github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' && (needs.deploy-staging-preview.result == 'success' || needs.deploy-staging-preview.result == 'skipped') }}
     runs-on: eks
     needs: deploy-staging-preview
     outputs:
@@ -234,7 +235,7 @@ jobs:
         shell: bash
 
   run-smoke-tests:
-    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -260,7 +261,7 @@ jobs:
           threads: 1
 
   run-all-tests:
-    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -289,7 +290,7 @@ jobs:
           threads: 1
 
   wait-for-n1-epoch:
-    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -323,7 +324,7 @@ jobs:
           environment: staging-preview
 
   run-all-tests-on-n1-epoch:
-    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -353,7 +354,7 @@ jobs:
           threads: 1
 
   wait-for-n2-epoch:
-    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -389,7 +390,7 @@ jobs:
           environment: staging-preview
 
   run-all-tests-on-n2-epoch:
-    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
+    if: ${{ github.event.inputs.no-tests != 'true' }}
     permissions:
       id-token: write
       contents: read
@@ -419,7 +420,7 @@ jobs:
           threads: 1
 
   publish:
-    if: ${{ github.event.inputs.no-release != 'true' && (github.event.inputs.no-tests == 'true' || needs.run-all-tests-on-n2-epoch.result == 'success' || needs.run-all-tests-on-n2-epoch.result == 'skipped') }}
+    if: ${{ github.event.inputs.no-release != 'true' && (github.event.inputs.no-tests == 'true' || needs.run-all-tests-on-n2-epoch.result == 'success') }}
     permissions:
       id-token: write
       contents: write
@@ -465,7 +466,7 @@ jobs:
 #          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 #
 #  staging-preprod-tests:
-#    if: ${{ github.event.inputs.no-tests != 'true' && github.event.inputs.no-deploy != 'true' }}
+#    if: ${{ github.event.inputs.no-tests != 'true' }}
 #    permissions:
 #      id-token: write
 #      contents: write
